Fixed display on mobile

--- a/web/style.css
+++ b/web/style.css
@@ -103,28 +103,31 @@ main {
 	flex: 3;
 }
 
+.overlay-container {
+	position: relative;
+}
+
 .overlay {
 	position: fixed;
 	display: block;
-	width: 25%;
-	height: 25%;
-	top: 25%;
-	left: 40%;
-	right: 0;
-	bottom: 0;
+	width: fit-content;
+	height: fit-content;
+	top: 35%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	background-color: rgba(0, 0, 0, 0.301);
 	z-index: 2;
 	cursor: pointer;
 }
 
-.overlay ~ .container {
+.overlay-container ~ .container {
 	filter: blur(5px);
 }
 
 .modal {
 	background-color: white;
 	border-radius: 4px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.6);
 	padding: 1rem;
 }
 
